@@ -1,6 +1,10 @@
 PiCenter Changelog
 
 1.0.03b
+
+Build 100123
+    Added device methods to backend.
+
 12/20/2019
 Build 100122
     CSV export now has date strings instead of milliseconds.
